Functioning hostile NPC, custom biome and new armors

--- a/src/main/resources/assets/wildernessoverhaul/lang/en_us.lang
+++ b/src/main/resources/assets/wildernessoverhaul/lang/en_us.lang
@@ -1,2 +1,7 @@
+item.longbowarrow.name=Longbow Arrow
+item.hardleatherchestplatehelmet.name=Hard Leather Chestplate Helmet
 entity.brigand.name=Brigand
+item.hardleatherchestplatelegs.name=Hard Leather Chestplate Leggings
 itemGroup.tabwildernessoverhaulcreatures=Wilderness Overhaul Creatures
+item.hardleatherchestplatebody.name=Hard Leather Chestplate Body
+item.hardleatherchestplateboots.name=Hard Leather Chestplate Boots
