--- a/bin/main/assets/wildernessoverhaul/lang/en_us.lang
+++ b/bin/main/assets/wildernessoverhaul/lang/en_us.lang
@@ -1,2 +1,3 @@
 entity.brigand.name=Brigand
 itemGroup.tabwildernessoverhaulcreatures=Wilderness Overhaul Creatures
+itemGroup.tabwildernessoverhaultools=Wilderness Overhaul Tools
